--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,7 +16,10 @@ linters:
     - lll
     - asciicheck
     - cyclop
+    - gocritic
+    - golint
     - gofmt
+    - gosec
     - goimports
     - ifshort
     - prealloc
@@ -31,7 +34,7 @@ linters-settings:
   goimports:
     local-prefixes: github.com/arxeiss/go-expression-calculator
   golint:
-    min-confidence: 0.8
+    min-confidence: 0 # 0 is most strict
 
 # issues:
 #   exclude-rules:
