--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,12 +18,12 @@ linters:
     - gocritic
     - gofmt
     - goimports
-    - golint
     - gosec
     - ifshort
     - lll
     - prealloc
-    - revive
+    # - revive
+    - stylecheck
     - unconvert
     - whitespace
   # disable:
@@ -40,10 +40,16 @@ linters-settings:
     tab-width: 4
   goimports:
     local-prefixes: github.com/arxeiss/go-expression-calculator
-  golint:
-    min-confidence: 0 # 0 is most strict
   cyclop:
     max-complexity: 15
+  staticcheck:
+    go: "1.15"
+    checks: ["all", "-ST1000", "ST1003", "ST1016", "ST1020", "ST1021", "ST1022"]
+  stylecheck:
+    go: "1.15"
+    checks: ["all", "-ST1000", "ST1003", "ST1016", "ST1020", "ST1021", "ST1022"]
+  # revive:
+  #   ignore-generated-header: true
 
 # issues:
 #   exclude-rules:
